floating task icon changed to toast machine and it works

--- a/templates/base.html
+++ b/templates/base.html
@@ -136,7 +136,7 @@
     </script>
     
     <!-- Floating task manager for background report generation -->
-    <script src="{{ url_for('static', filename='js/floating_task.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/toaster.js') }}"></script>
     
     {% block extra_scripts %}{% endblock %}
 </body>
