--- a/templates/report_generation.html
+++ b/templates/report_generation.html
@@ -532,6 +532,6 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='js/floating_task.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/toaster.js') }}"></script>
 </body>
 </html>
