--- a/templates/report_view_llm.html
+++ b/templates/report_view_llm.html
@@ -412,6 +412,6 @@
             });
         });
     </script>
-    <script src="{{ url_for('static', filename='js/floating_task.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/toaster.js') }}"></script>
 </body>
 </html>
